# mysql-shell

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  CTestConfig.cmake  CTestCustom.cmake  INSTALL  LICENSE  MYSQL_VERSION  README  README.repo  ROUTING_GUIDELINES.md  VERSION  config.h.cmake  configure.cmake  et  interactive_shell.diff  mysh_config.h.cmake  mysqlsh_config.sh  refactoring.diff  verbose1.diff  version.cmake
client/: CMakeLists.txt  README.txt  cmake-server-patch.txt  shell_client.cc  shell_client.h
client/managed/: CMakeLists.txt  README.txt  managed_mysqlx_result.cpp  managed_mysqlx_result.h  managed_shell_client.cpp  managed_shell_client.h  mysqlsh.snk  mysqlx.snk
client/sample/: CMakeLists.txt  simple_shell_client_app.cc
common/logger/: CMakeLists.txt  logger.cc  logger.h
doc/: CMakeLists.txt
doc/apis/: CMakeLists.txt  DoxygenLayout.scripting.xml  connection_data.dox  connection_options.dox  doxygen.cfg.in  extension_objects.dox  footer.html.in  main.dox  parameter_binding.dox  remote_storage.dox
modules/: CMakeLists.txt  base_constants.cc  base_constants.h  base_database_object.cc  base_database_object.h  base_resultset.cc  base_resultset.h  base_session.cc  base_session.h  collection_crud_definition.cc  collection_crud_definition.h  command_interface.h  crud_definition.cc  crud_definition.h  dynamic_object.cc  dynamic_object.h  errors.h  generate_metadata_source.cmake  interactive_object_wrapper.cc  interactive_object_wrapper.h  mod_common.h  mod_connection.cc  mod_connection.h  mod_crud_collection_add.cc  mod_crud_collection_add.h  mod_crud_collection_find.cc  mod_crud_collection_find.h  mod_crud_collection_remove.cc  mod_crud_collection_remove.h  mod_crud_table_insert.cc  mod_crud_table_insert.h  mod_db.cc  mod_db.h  mod_db_table.cc  mod_db_table.h  mod_extensible_object.cc  mod_extensible_object.h  mod_mysql.cc  mod_mysql.h  mod_mysql_constants.cc  (+90 more)
modules/adminapi/: CMakeLists.txt  base_cluster.cc  base_cluster.h  dba_utils.cc  dba_utils.h  instance_validations.cc  instance_validations.h  metadata-model.sql  metadata-model_definitions.h.in  mod_dba.cc  mod_dba.h  mod_dba_cluster.cc  mod_dba_cluster.h  mod_dba_cluster_set.cc  mod_dba_cluster_set.h  mod_dba_common.cc  mod_dba_common.h  mod_dba_errors.h  mod_dba_farm.cc  mod_dba_farm.h  mod_dba_instance.cc  mod_dba_instance.h  mod_dba_metadata_storage.cc  mod_dba_metadata_storage.h  mod_dba_options.cc  mod_dba_options.h  mod_dba_provisioning_interface.cc  mod_dba_provisioning_interface.h  mod_dba_replica_set.cc  mod_dba_replica_set.h  mod_dba_replicaset.cc  mod_dba_replicaset.cc.orig  mod_dba_replicaset.cc.rej  mod_dba_replicaset.h  mod_dba_routing_guideline.cc  mod_dba_sql.cc  (+17 more)
mysql-secret-store/: CMakeLists.txt
mysqlshdk/: CMakeLists.txt
mysqlxtest/: CMakeLists.txt  auth_mysql41.cc  boost_code.cc  compilerutils.h  expr_parser.cc  expr_parser.h  mysql41_hash.cc  mysql41_hash.h  mysqlx.cc  mysqlx.h  mysqlx_all_msgs.h  mysqlx_charset.cc  mysqlx_charset.h  mysqlx_common.h  mysqlx_connection.h  mysqlx_crud.cc  mysqlx_crud.h  mysqlx_parser.h  mysqlx_row.cc  mysqlx_row.h  mysqlx_sync_connection.cc  mysqlx_sync_connection.h  mysqlx_test_connector.cc  mysqlx_test_connector.h  mysqlxtest.cc  password_hasher.cc  proj_parser.cc  proj_parser.h  xdatetime.h  xdecimal.h  xerrmsg.h  xpl_error.h
python/: CMakeLists.txt  mysqlprovision.cmd  unittests.py
res/: CMakeLists.txt  resource.h  resource.rc  resource.rc.in  syslog_event.mc
shell-tests/: CMakeLists.txt  mxtr.out-of-source  mysqlx-test-run.py
shellcore/: CMakeLists.txt  common.cc  core_types.cc  interactive_dba_cluster.cc  interactive_dba_cluster.h  interactive_dba_farm.cc  interactive_dba_farm.h  interactive_global_admin.cc  interactive_global_admin.h  interactive_global_dba.cc  interactive_global_dba.h  interactive_global_schema.cc  interactive_global_schema.h  interactive_global_session.cc  interactive_global_session.h  interactive_object_wrapper.cc  interactive_object_wrapper.h  jscript_array_wrapper.cc  jscript_context.cc  jscript_function_wrapper.cc  jscript_map_wrapper.cc  jscript_object_wrapper.cc  jscript_type_conversion.cc  obj_date.cc  object_factory.cc  object_registry.cc  proxy_object.cc  python_array_wrapper.cc  python_context.cc  python_function_wrapper.cc  python_map_wrapper.cc  python_object_wrapper.cc  python_type_conversion.cc  server_registry.cc  shell_core.cc  shell_core_js.cc  shell_core_options.cc  shell_jscript.cc  shell_notifications.cc  shell_python.cc  (+8 more)
src/: CMakeLists.txt  boost_code.cc  cmdline_options.h  cmdline_shell.cc  cmdline_shell.h  get_password.cc  interactive_shell.cc  interactive_shell.h  main.cc  mysh.h  shell_cmdline_options.cc  shell_cmdline_options.h  shell_resultset_dumper.cc  shell_resultset_dumper.h
testing/: CMakeLists.txt  TestGroups.txt  mod_mysql_t.cc  mysqlx_test_connection_t.cc  server_registry_t.cc  shell_command_handler_t.cc  shell_core_t.cc  shell_js_mysqlx_t.cc  shell_js_t.cc  shell_sql_t.cc  simple_t.cc  test_main.cc  test_utils.h  value_js_bridging_t.cc  value_py_bridging_t.cc
types/: CMakeLists.txt  ishell_core.cc
unittest/: CMakeLists.txt  Command_line_connection _t.cc  TestGroups.txt  auto_script_js_t.cc  auto_script_py_t.cc  bug24911173_t.cc  bug25684798_t.cc  bug26102807_t.cc  cmdline_shell_t.cc  command_line_connection_t.cc  completion_cache_refresh_t.cc  completion_frontend_t.cc  expr_parser_t.cc  gprod_clean.h  gtest.cmake  gtest_clean.h  gtest_legacy.cmake  interactive_global_dba_t.cc  interactive_global_schema_js_t.cc  interactive_global_schema_py_t.cc  interactive_global_session_js_t.cc  interactive_global_session_py_t.cc  interactive_object_wrapper_t.cc  interactive_shell_t.cc  json_shell_t.cc  mod_mysql_t.cc  mod_mysqlx_t.cc  mysql_secret_store_t.cc  mysqlsh_credential_store_t.cc  mysqlsh_fieldtypes_all_t.cc  mysqlsh_misc_t.cc  mysqlsh_pager_t.cc  mysqlsh_plugins_t.cc  mysqlsh_ssl_t.cc  named_pipe_t.cc  orderby_parser_t.cc  proj_parser_t.cc  server_registry_t.cc  shell_application_log_t.cc  shell_cli_operation_t.cc  (+87 more)
(+26773 files in other folders)
